# Fast-Cli-Keepass

./: Cargo.toml  Example.kdbx  README.md  rel.py
.cargo/: config.toml
.github/workflows/: release.yml
src/: args.rs  config.rs  db.rs  main.rs
wix/: main.wxs
