[package]
name = "fast-cli-keepass"
version = "0.1.0"
edition = "2021"

[dependencies]
# To parse cli args
clap = {version="4.5.2", features=["derive"]}

# To read & parse the db
keepass = "0.7.7"

# For storing our app state
toml = "0.8.10"
directories = "5.0.1"
serde = {version="1.0.197", features=["derive"]}

# To put the password in the clipboard
copypasta = "0.10.1"

[profile.dev.package."*"]
opt-level = 3

#todo addd color_eyre