[package]
name = "fast-cli-keepass"
version = "0.1.0"
edition = "2021"

[dependencies]
# To parse cli args
clap = {version="4.5.2", features=["derive"]}

# To read & parse the db
keepass = "0.7.7"

# To put the password in the clipboard
copypasta = "0.10.1"

# To ask password from user
rpassword = "7.3.1"

# For reporting errors to the user
color-eyre = "0.6.2"

# To find the entries the user is searching
rust-fuzzy-search = "0.1.1"

[profile.dev.package."*"]
opt-level = 3

#todo addd color_eyre